filter by reference
